apps/02-monitoring/loki/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  labels:
    app: loki
spec:
  replicas: 1
  serviceName: loki-headless # Must match the headless service name
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      annotations:
        vixens.io/fast-start: "true"
        # loki G-large = 2048Mi
        vixens.io/vpa.max-memory: "2048Mi"
      labels:
        app: loki
        vixens.io/sizing.loki: G-large
        vixens.io/backup-profile: "relaxed"
    spec:
      priorityClassName: vixens-critical
      securityContext:
        runAsNonRoot: true
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 10001
        runAsUser: 10001
      volumes:
        - name: config
          configMap:
            name: loki-config-v2
            items:
              - key: loki.yaml
                path: loki.yaml
      containers:
        - name: loki
          image: grafana/loki:3.7.8
          lifecycle:
            preStop:
              exec:
                command: ["sleep", "5"]
          args:
            - -config.file=/etc/loki/loki.yaml
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
            - name: grpc
              containerPort: 9095
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: /var/loki
          resources:
            requests:
              memory: 1024Mi
              cpu: 500m
            limits:
              memory: 1024Mi
              cpu: 500m
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 10
            timeoutSeconds: 1
          livenessProbe:
            httpGet:
              path: /metrics
              port: http-metrics
            initialDelaySeconds: 30
            timeoutSeconds: 1
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: truenas-iscsi-retain
        resources:
          requests:
            storage: 10Gi # Adjust as needed for Loki data
