apps/02-monitoring/loki/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: loki
spec:
  selector:
    app: loki
  ports:
    - name: http-metrics
      port: 3100
      targetPort: 3100
      protocol: TCP
    - name: grpc
      port: 9095
      targetPort: 9095
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: loki-headless
  labels:
    app: loki
spec:
  clusterIP: None
  selector:
    app: loki
  ports:
    - name: http-metrics
      port: 3100
      targetPort: 3100
      protocol: TCP
    - name: grpc
      port: 9095
      targetPort: 9095
      protocol: TCP
